--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -38,7 +38,8 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=USB_DEVICE
+Mcu.IP10=USB
+Mcu.IP11=USB_DEVICE
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=IWDG
@@ -46,25 +47,27 @@ Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=SPI1
 Mcu.IP8=SYS
-Mcu.IP9=USB
-Mcu.IPNb=11
+Mcu.IP9=USART1
+Mcu.IPNb=12
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin10=PB1
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=VP_ADC1_TempSens_Input
-Mcu.Pin16=VP_ADC1_Vref_Input
-Mcu.Pin17=VP_CRC_VS_CRC
-Mcu.Pin18=VP_FREERTOS_VS_ENABLE
-Mcu.Pin19=VP_IWDG_VS_IWDG
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=VP_ADC1_TempSens_Input
+Mcu.Pin18=VP_ADC1_Vref_Input
+Mcu.Pin19=VP_CRC_VS_CRC
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_SYS_VS_tim1
-Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=VP_FREERTOS_VS_ENABLE
+Mcu.Pin21=VP_IWDG_VS_IWDG
+Mcu.Pin22=VP_SYS_VS_tim1
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA3
@@ -72,7 +75,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=22
+Mcu.PinsNb=24
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.22.0
@@ -99,6 +102,8 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ADC_CURRENT
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -123,6 +128,8 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=CC1101 MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=CC1101_CSN
 PB0.Locked=true
@@ -172,7 +179,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_CRC_Init-CRC-false-HAL,6-MX_IWDG_Init-IWDG-false-HAL,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,8-MX_SPI1_Init-SPI1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_CRC_Init-CRC-false-HAL,6-MX_IWDG_Init-IWDG-false-HAL,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,8-MX_SPI1_Init-SPI1-false-HAL,9-MX_USART1_UART_Init-USART1-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
@@ -204,6 +211,8 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
