--- a/receiver/receiver.ioc
+++ b/receiver/receiver.ioc
@@ -59,7 +59,7 @@ Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin20=VP_IWDG_VS_IWDG
 Mcu.Pin21=VP_SYS_VS_tim1
 Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA3
+Mcu.Pin3=PA4
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
@@ -97,10 +97,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=CC1101 GDO2
-PA3.Locked=true
-PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=CC1101 GDO2
+PA4.Locked=true
+PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=CC1101 SCK
 PA5.Mode=Full_Duplex_Master
@@ -122,7 +122,7 @@ PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=CC1101 GDO0
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.Signal=GPIO_Input
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=BUZZER
 PB4.Signal=S_TIM3_CH1
