--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -70,7 +70,7 @@ Mcu.Pin22=VP_SYS_VS_tim1
 Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
-Mcu.Pin5=PA3
+Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
@@ -112,10 +112,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=CC1101 GDO2
-PA3.Locked=true
-PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=CC1101 GDO2
+PA4.Locked=true
+PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=CC1101 SCK
 PA5.Mode=Full_Duplex_Master
@@ -135,9 +135,9 @@ PB0.GPIO_Label=CC1101_CSN
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=CC1101 GDO0
+PB1.GPIO_Label=CC1101_GDO0
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.Signal=GPIO_Input
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=RED LED
 PC13-TAMPER-RTC.Locked=true
