--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -78,23 +78,23 @@ Mcu.Pin9=PB0
 Mcu.PinsNb=24
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=4.22.0
-MxDb.Version=DB.4.0.220
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true
+MxCube.Version=4.23.0
+MxDb.Version=DB.4.0.230
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true
-NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=ADC VOLTAGE
 PA0-WKUP.Signal=ADCx_IN0
