--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -83,6 +83,7 @@ MxDb.Version=DB.4.0.230
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.EXTI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -134,10 +135,11 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=CC1101_CSN
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB1.GPIO_Label=CC1101_GDO0
+PB1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB1.Locked=true
-PB1.Signal=GPIO_Input
+PB1.Signal=GPXTI1
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=RED LED
 PC13-TAMPER-RTC.Locked=true
@@ -205,6 +207,8 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=1.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
