--- a/receiver/receiver.ioc
+++ b/receiver/receiver.ioc
@@ -67,10 +67,11 @@ Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PA9
 Mcu.PinsNb=23
+Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=4.23.0
-MxDb.Version=DB.4.0.230
+MxCube.Version=4.24.0
+MxDb.Version=DB.4.0.240
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel6_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -159,7 +160,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=/home/oleg/bin/STM32CubeMX/Repository/STM32Cube_FW_F1_V1.6.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
@@ -178,7 +179,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_CRC_Init-CRC-false-HAL,5-MX_IWDG_Init-IWDG-false-HAL,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,7-MX_SPI1_Init-SPI1-false-HAL,8-MX_USART1_UART_Init-USART1-false-HAL,9-MX_I2C1_Init-I2C1-false-HAL,10-MX_TIM3_Init-TIM3-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_IWDG_Init-IWDG-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
