--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -170,7 +170,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.6.0
 ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
+ProjectManager.HalAssertFull=true
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
