kicad files and cleanup

--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -39,8 +39,7 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=USB
-Mcu.IP11=USB_DEVICE
+Mcu.IP10=USART2
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=IWDG
@@ -49,16 +48,16 @@ Mcu.IP6=RCC
 Mcu.IP7=SPI1
 Mcu.IP8=SYS
 Mcu.IP9=USART1
-Mcu.IPNb=12
+Mcu.IPNb=11
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB1
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
 Mcu.Pin15=PA13
 Mcu.Pin16=PA14
 Mcu.Pin17=VP_ADC1_TempSens_Input
@@ -68,15 +67,14 @@ Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin20=VP_FREERTOS_VS_ENABLE
 Mcu.Pin21=VP_IWDG_VS_IWDG
 Mcu.Pin22=VP_SYS_VS_tim1
-Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=24
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -96,41 +94,50 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=ADC VOLTAGE
+PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ADC_CURRENT
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
+PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.Mode=Device
-PA11.Signal=USB_DM
-PA12.Mode=Device
-PA12.Signal=USB_DP
+PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
+PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Locked=true
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Locked=true
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=CC1101 GDO2
 PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=CC1101 SCK
+PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=CC1101 MISO
+PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=CC1101 MOSI
+PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
@@ -154,8 +161,10 @@ PCC.Seq0=0
 PCC.Series=STM32F1
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD0-OSC_IN.Locked=true
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
+PD1-OSC_OUT.Locked=true
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
@@ -183,7 +192,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_IWDG_Init-IWDG-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_IWDG_Init-IWDG-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
@@ -195,11 +204,12 @@ RCC.APB2TimFreq_Value=48000000
 RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=48000000
 RCC.PLLMCOFreq_Value=24000000
 RCC.PLLMUL=RCC_PLL_MUL6
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
@@ -219,10 +229,8 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
-USB_DEVICE.VirtualMode=Cdc
-USB_DEVICE.VirtualModeFS=Cdc_FS
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
@@ -235,6 +243,4 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=transmitter
