ADC sample rate change

--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -1,20 +1,62 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.Channel-45\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-46\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-47\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-48\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-49\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-50\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-51\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-52\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-53\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-54\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-55\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-56\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-57\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-58\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-59\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EnableAnalogWatchDog=false
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ContinuousConvMode,InjNumberOfConversion,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,ExternalTrigConv,EnableAnalogWatchDog,Rank-45\#ChannelRegularConversion,Channel-45\#ChannelRegularConversion,SamplingTime-45\#ChannelRegularConversion,master
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ContinuousConvMode,InjNumberOfConversion,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,ExternalTrigConv,EnableAnalogWatchDog,Rank-45\#ChannelRegularConversion,Channel-45\#ChannelRegularConversion,SamplingTime-45\#ChannelRegularConversion,master,Rank-46\#ChannelRegularConversion,Channel-46\#ChannelRegularConversion,SamplingTime-46\#ChannelRegularConversion,Rank-47\#ChannelRegularConversion,Channel-47\#ChannelRegularConversion,SamplingTime-47\#ChannelRegularConversion,Rank-48\#ChannelRegularConversion,Channel-48\#ChannelRegularConversion,SamplingTime-48\#ChannelRegularConversion,Rank-49\#ChannelRegularConversion,Channel-49\#ChannelRegularConversion,SamplingTime-49\#ChannelRegularConversion,Rank-50\#ChannelRegularConversion,Channel-50\#ChannelRegularConversion,SamplingTime-50\#ChannelRegularConversion,Rank-51\#ChannelRegularConversion,Channel-51\#ChannelRegularConversion,SamplingTime-51\#ChannelRegularConversion,Rank-52\#ChannelRegularConversion,Channel-52\#ChannelRegularConversion,SamplingTime-52\#ChannelRegularConversion,Rank-53\#ChannelRegularConversion,Channel-53\#ChannelRegularConversion,SamplingTime-53\#ChannelRegularConversion,Rank-54\#ChannelRegularConversion,Channel-54\#ChannelRegularConversion,SamplingTime-54\#ChannelRegularConversion,Rank-55\#ChannelRegularConversion,Channel-55\#ChannelRegularConversion,SamplingTime-55\#ChannelRegularConversion,Rank-56\#ChannelRegularConversion,Channel-56\#ChannelRegularConversion,SamplingTime-56\#ChannelRegularConversion,Rank-57\#ChannelRegularConversion,Channel-57\#ChannelRegularConversion,SamplingTime-57\#ChannelRegularConversion,Rank-58\#ChannelRegularConversion,Channel-58\#ChannelRegularConversion,SamplingTime-58\#ChannelRegularConversion,Rank-59\#ChannelRegularConversion,Channel-59\#ChannelRegularConversion,SamplingTime-59\#ChannelRegularConversion
 ADC1.InjNumberOfConversion=0
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-45\#ChannelRegularConversion=2
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
-ADC1.SamplingTime-45\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
+ADC1.Rank-46\#ChannelRegularConversion=3
+ADC1.Rank-47\#ChannelRegularConversion=4
+ADC1.Rank-48\#ChannelRegularConversion=5
+ADC1.Rank-49\#ChannelRegularConversion=6
+ADC1.Rank-50\#ChannelRegularConversion=7
+ADC1.Rank-51\#ChannelRegularConversion=8
+ADC1.Rank-52\#ChannelRegularConversion=9
+ADC1.Rank-53\#ChannelRegularConversion=10
+ADC1.Rank-54\#ChannelRegularConversion=11
+ADC1.Rank-55\#ChannelRegularConversion=12
+ADC1.Rank-56\#ChannelRegularConversion=13
+ADC1.Rank-57\#ChannelRegularConversion=14
+ADC1.Rank-58\#ChannelRegularConversion=15
+ADC1.Rank-59\#ChannelRegularConversion=16
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_41CYCLES_5
+ADC1.SamplingTime-45\#ChannelRegularConversion=ADC_SAMPLETIME_41CYCLES_5
+ADC1.SamplingTime-46\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-47\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-48\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-49\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-50\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-51\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-52\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-53\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-54\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-55\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-56\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-57\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-58\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-59\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
